# Cardinal-Engine

./: CMakeLists.txt  README.md
Builds/: Cardinal_Build_1_Release.rar
CMake/: CMakeConfigDirectory.cmake  CMakeConfigGlobal.cmake
Engine/: CMakeLists.txt
Engine/Header/Runtime/: Engine.hpp
Engine/Header/Runtime/Physics/: CollisionShape.hpp  PhysicsEngine.hpp  RigidBody.hpp
Engine/Header/Runtime/Rendering/: RenderingEngine.hpp
Engine/Header/Runtime/Sound/: SoundEngine.hpp
Engine/Resources/Shaders/: fsbase.glsl  vsbase.glsl
Engine/Resources/Shaders/Experimental/: ExperimentalFragmentShader_1.glsl
Engine/Resources/Shaders/Lit/: LitTextureFragmentShader.glsl  LitTextureVertexShader.glsl
Engine/Resources/Shaders/PostProcessing/: BloomFragmentShader.glsl  BoxBlurFragmentShader.glsl  DepthBufferFragmentShader.glsl  DepthOfFieldFragmentShader.glsl  EdgeDetectionFragmentShader.glsl  FXAAFragmentShader.glsl  FogFragmentShader.glsl  GaussianBlurFragmentShader.glsl  fs_post.glsl  (+7 more)
Engine/Runtime/Source/: CMakeLists.txt  Entry.cpp  Main.cpp
Engine/Runtime/Source/Core/Debug/: Logger.cpp
Engine/Runtime/Source/Core/Maths/Noise/: PerlinNoise.cpp
Engine/Runtime/Source/Rendering/: RenderingEngine.cpp
Engine/Runtime/Source/Rendering/Camera/: Camera.cpp
Engine/Runtime/Source/Rendering/Context/: Window.cpp
Engine/Runtime/Source/Rendering/Debug/: DebugCube.cpp  DebugLine.cpp
Engine/Runtime/Source/Rendering/Optimization/: VBOIndexer.cpp
Engine/Runtime/Source/Rendering/Renderer/: MeshRenderer.cpp
Engine/Runtime/Source/Rendering/Shader/: ShaderCompiler.cpp
Engine/Runtime/Source/Rendering/Texture/: TextureLoader.cpp
Engine/Source/: CMakeLists.txt
Engine/Source/Runtime/: CMakeLists.txt  Engine.cpp  Main.cpp
Engine/Source/Runtime/Core/Debug/: Logger.cpp
Engine/Source/Runtime/Core/Maths/Noise/: PerlinNoise.cpp
Engine/Source/Runtime/Core/Memory/Allocator/: StackAllocator.cpp
Engine/Source/Runtime/Core/Plugin/: PluginManager.cpp
Engine/Source/Runtime/Physics/: CollisionShape.cpp  PhysicsEngine.cpp  RigidBody.cpp
Engine/Source/Runtime/Rendering/: RenderingEngine.cpp
Engine/Source/Runtime/Rendering/Camera/: Camera.cpp
Engine/Source/Runtime/Rendering/Context/: Window.cpp
Engine/Source/Runtime/Rendering/Debug/: DebugBox.cpp  DebugCube.cpp  DebugGizmos.cpp  DebugGrid.cpp  DebugLine.cpp  DebugManager.cpp  DebugRay.cpp
Engine/Source/Runtime/Rendering/Hierarchy/: Inspector.cpp
Engine/Source/Runtime/Rendering/Lighting/: LightManager.cpp
Engine/Source/Runtime/Rendering/Lighting/Lights/: DirectionalLight.cpp  PointLight.cpp
Engine/Source/Runtime/Rendering/Mesh/: Cube.cpp
Engine/Source/Runtime/Rendering/Optimization/: VBOIndexer.cpp
Engine/Source/Runtime/Rendering/Particle/: ParticleSystem.cpp
Engine/Source/Runtime/Rendering/Particle/EmissionShape/: Cone.cpp  Plane.cpp
Engine/Source/Runtime/Rendering/PostProcessing/: PostProcessingStack.cpp
Engine/Source/Runtime/Rendering/PostProcessing/PostEffects/: Bloom.cpp  BoxBlur.cpp  DepthBuffer.cpp  DepthOfField.cpp  EdgeDetection.cpp  FXAA.cpp  Fog.cpp  GaussianBlur.cpp  GodRay.cpp  Identity.cpp  LightScattering.cpp  Mirror.cpp  Negative.cpp  PostEffect.cpp  Sepia.cpp  ShadowMap.cpp  Sharpen.cpp  Vignette.cpp
Engine/Source/Runtime/Rendering/PostProcessing/PostEffects/Experimental/: Experimental1.cpp  Experimental2.cpp
Engine/Source/Runtime/Rendering/Renderer/: BetaRenderer.cpp  IRenderer.cpp  LineRenderer.cpp  MeshRenderer.cpp  ParticleRenderer.cpp  TextRenderer.cpp
Engine/Source/Runtime/Rendering/Shader/: IShader.cpp  ShaderCompiler.cpp  ShaderManager.cpp
Engine/Source/Runtime/Rendering/Shader/Built-in/: TextShader.cpp  UnlitColorShader.cpp  UnlitTextureShader.cpp  UnlitTransparentShader.cpp
Engine/Source/Runtime/Rendering/Shader/Built-in/Lit/: LitTextureShader.cpp
Engine/Source/Runtime/Rendering/Shader/Built-in/Particle/: ParticleShader.cpp
Engine/Source/Runtime/Rendering/Shader/Built-in/Standard/: StandardShader.cpp
Engine/Source/Runtime/Rendering/Shader/Built-in/Text/: TextShader.cpp
Engine/Source/Runtime/Rendering/Shader/Built-in/Unlit/: UnlitColorShader.cpp  UnlitLineShader.cpp  UnlitTextureShader.cpp  UnlitTransparentShader.cpp
Engine/Source/Runtime/Rendering/Texture/: TextureImporter.cpp  TextureLoader.cpp  TextureManager.cpp
Engine/Source/Runtime/Sound/: SoundEngine.cpp
Engine/Source/Runtime/Sound/Buffer/: SoundBuffer.cpp  SoundBufferManager.cpp
Engine/Source/Runtime/Sound/Listener/: AudioListener.cpp
Engine/Source/Runtime/Sound/Loader/: AudioLoader.cpp
Engine/Source/Runtime/Sound/Source/: AudioSource.cpp
Engine/UnitTest/: CMakeLists.txt
Engine/UnitTest/SDL/: CMakeLists.txt
Engine/UnitTest/SandBox/: CMakeLists.txt  UnitTestTest.cpp
Game/: CMakeLists.txt
Game/Header/Character/: Character.hpp  PhysicsCharacter.hpp
Game/Header/City/: ProceduralBuilding.hpp  ProceduralBuildingRenderer.hpp
Game/Header/Plugin/: Demo_Plugin.hpp  Main_Plugin.hpp  PCGCity_Plugin.hpp  PCG_Plugin.hpp  VR_plugin.hpp
Game/Header/Rendering/: CameraManager.hpp
Game/Header/World/: ByteCube.hpp  Chunk.hpp  ChunkRegulator.hpp  Cube.hpp  World.hpp  WorldBuffers.hpp  WorldSettings.hpp
Game/Source/: CMakeLists.txt  Main.cpp  PCG_main.cpp  Physics.cpp
Game/Source/Character/: Character.cpp  PhysicsCharacter.cpp
Game/Source/City/: ProceduralBuildRenderer.cpp  ProceduralBuilding.cpp
Game/Source/Plugin/: Demo_Plugin.cpp  Main_Plugin.cpp  PCGCity_Plugin.cpp  PCG_Plugin.cpp  VR_Plugin.cpp
Game/Source/Rendering/: CameraManager.cpp
Game/Source/World/: Chunk.cpp  ChunkRegulator.cpp  World.cpp  WorldBuffers.cpp
Game/Source/World/Chunk/: Chunk.cpp
Game/Source/World/Chunk/Renderer/: EighthBlockRenderer.cpp  GrassRenderer.cpp  TerrainRenderer.cpp  TransparentCubeRenderer.cpp
Game/Source/World/Cube/: ByteCube.cpp  UVManager.cpp
Game/Source/World/Detail/: Grass.cpp
Game/Source/World/Generator/: BasicWorldGenerator.cpp  GeneratorGUI.cpp  IWorldGenerator.cpp
Game/Source/World/Generator/GUI/: GeneratorGUI.cpp
Game/Source/World/Generator/Noise/: FastNoise.cpp  PerlinNoise.cpp
(+127 files in other folders)
